Inclusão de Códigos R
Cósdigo R nos ambientes lista de acrônimos e lista de simbolos não está rodando corretamente. Verificar para corrigir a solução Latex para o Rmarkdown.

--- a/00-08-acronimos.Rmd
+++ b/00-08-acronimos.Rmd
@@ -1,10 +1,10 @@
 \begin{listaacron}
 
-\begin{longtable}{r r}
-\caption{This table shows the volatges and temperatures of the cell immediately before and immediately after cell failure}\\
-DINF & Departamento de Informática\\
-PPGINF & Programa de Pós-Graduação em Informática\\
-UFPR & Universidade Federal do Paraná\\
-\end{longtable}
+```{r, echo=FALSE, message=FALSE, results='asis'}
+library(knitr)
+simba <- data.frame(Simbolo = c('UFPR', 'BACEN', 'FEBRABAN'), Descrição = c('Universidade Federal do Paraná', 'Banco Central do Brasil', 'Federação dos Bancos do Brasil'))
+simba <- kable(simba, align = 'l', )
+print(simba, justify)
+```
 
 \end{listaacron}
