--- a/preamble 2.tex
+++ b/preamble 2.tex
@@ -6,7 +6,7 @@
 
 \usepackage{lstlisting}
 \usepackage{lipsum}
-\usepackage{caption}
+
 
 % Definição de fontes
 
@@ -84,7 +84,7 @@
 % ------------------------------------------------------------------------------
 
 % fontes adicionais
-\usepackage{amsmath}		% pacotes matemáticos
+%\usepackage{amsmath}		% pacotes matemáticos
 %\usepackage{amsfonts}		% fontes matemáticas 
 %\usepackage{amssymb}		% símbolos 
 
