--- a/04-application.Rmd
+++ b/04-application.Rmd
@@ -1,9 +1,7 @@
 \chapter{Aplicação}
 \label{cap:aplicacao}
 
----
-#\graphicspath{\currfiledir/figuras/}
----
+\graphicspath{{\currfiledir/figure/}}
 
 \section{Guias de \LaTeX}
 
@@ -57,7 +55,6 @@ A maior parte das ferramentas permite exportar figuras nesses formatos (a figura
 \end{figure}
 
 Para mais informações consulte \cite{goossens93}.
-
 
 \subsection{Exemplo de tabela}
 
@@ -137,7 +134,7 @@ Esse pacote também permite incluir códigos-fonte de arquivos externos. Eis um 
 
 Os pacotes \texttt{algorithm} e \texttt{algorithmic} permitem formatar algoritmos facilmente. Eis um exemplo:
 
----
+
 \begin{algorithm}[H]
 \caption{Ações de $s_i$ ao encerrar um ciclo:}
 \label{alg:on-period-ending}
@@ -158,7 +155,7 @@ Os pacotes \texttt{algorithm} e \texttt{algorithmic} permitem formatar algoritmo
 \end{algorithmic}
 \end{small}
 \end{algorithm}
----
+
 
 \subsection{Exemplo de citação}
 
