--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -42,12 +42,12 @@ Modelo de gráfico em código R:
 
 ```{r echo=FALSE, message=FALSE, results='asis', fig.height= 5, fig.width= 5}
 library(ggplot2)
-g <- ggplot(mtcars, aes(y = mpg, x = cyl)) +
+g <- ggplot(mtcars, aes(y = mpg, x = hp)) +
         geom_point(col = 'blue')+
         geom_smooth(method= "lm")+
         labs(subtitle="Consumo de Combustível", 
              y="Consumo de Combustível",
-             x="Cilindradas", 
+             x="Cavalos de Potência", 
              title="Scatterplot", 
              caption = "Data Base")
 print(g, format = justify)
