--- a/00-08-acronimos.Rmd
+++ b/00-08-acronimos.Rmd
@@ -1,7 +1,6 @@
 \begin{listaacron}
 
-\begin{longtable}{r r}
-\caption{This table shows the volatges and temperatures of the cell immediately before and immediately after cell failure}\\
+\begin{longtable}[l]{p{0.2\linewidth}p{0.7\linewidth}}
 DINF & Departamento de Informática\\
 PPGINF & Programa de Pós-Graduação em Informática\\
 UFPR & Universidade Federal do Paraná\\
